# ducklake_sdk

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  init.sh  pyproject.toml  requirements.txt
infrastructure/: docker-compose.yml
infrastructure/airflow/config/: airflow.cfg
lake/: cmd.py  render.py
lake/connector/: __init__.py  core.py  kafka.py
lake/pages/: __init__.py  house_price_dashboard.py  lake_data.py  marketing.py  personal.py  resinets_dashboard.py  s3fs_data.py
lake/util/: conf_loader.py
lake/util/logger/: setup.py
resources/: config.docs.yml  config.local.yml  config.yml  log_config.yml
resources/assets/: installer.sh
